--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/Theme.ShopCart">
         <activity
             android:name=".activitys.ProductDetailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.ShopCart.ActionBar"/>
         <activity
             android:name=".activitys.MainActivity"
             android:exported="true">
