Payment & Category Activity Complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.ShopCart"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activitys.CategoryActivity"
+            android:exported="false"
+            android:label="Category "
+            android:theme="@style/Theme.ShopCart.ActionBar" />
+        <activity
+            android:name=".activitys.PaymentActivity"
+            android:exported="false"
+            android:label="Payment "
+            android:theme="@style/Theme.ShopCart.ActionBar" />
+        <activity
             android:name=".activitys.CheckOutActivity"
             android:exported="false"
             android:label="CheckOut Item"
