--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.ShopCart"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activitys.SearchActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ShopCart.ActionBar" />
+        <activity
             android:name=".activitys.CategoryActivity"
             android:exported="false"
             android:label="Category "
