--- a/settings.gradle
+++ b/settings.gradle
@@ -11,9 +11,10 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
+        maven { url "https://phonepe.mycloudrepo.io/public/repositories/phonepe-intentsdk-android" }
         maven {
             url 'https://jitpack.io'
-        }
+            }
     }
 }
 rootProject.name = "ShopCart"
